Removes 404 errors with css.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-@import url("../blocks/configurable_reports/js/datatables/media/css/jquery.dataTables.css");
-@import url("../blocks/configurable_reports/js/codemirror/lib/codemirror.css");
-@import url("../blocks/configurable_reports/js/codemirror/addon/display/fullscreen.css");
+@import url("../../../../blocks/configurable_reports/js/datatables/media/css/jquery.dataTables.css");
+@import url("../../../../blocks/configurable_reports/js/codemirror/lib/codemirror.css");
+@import url("../../../../blocks/configurable_reports/js/codemirror/addon/display/fullscreen.css");
 
 .dir-rtl .CodeMirror {
     direction: ltr;
